<resources>
    <string name="app_name">MyFavoriteApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>

    <string name="wallpapers">Wallpapers</string>
    <string name="live_wallpapers">Live Wallpapers</string>
    <string name="ringtone">Ringtones</string>
    <string name="notify">Notifications</string>
    <string name="games">Games</string>
    <string name="icons">Icons</string>
    <string name="lists">Lists</string>
    <string name="download_history">Download History</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="info">Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
