<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
           android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_wallpapers"
            android:icon="@drawable/wallpapers_cut"
            android:title="@string/wallpapers" />
        <item
            android:id="@+id/nav_live_wallpapers"
            android:icon="@drawable/live_wallpapers_cut"
            android:title="@string/live_wallpapers" />
        <item
            android:id="@+id/nav_ringtone"
            android:icon="@drawable/sound_cut"
            android:title="@string/ringtone" />
        <item
            android:id="@+id/nav_notify"
            android:icon="@drawable/notify_cut"
            android:title="@string/notify" />
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/game_cut"
            android:title="@string/games" />
        <item
            android:id="@+id/nav_icons"
            android:icon="@drawable/icons_cut"
            android:title="@string/icons" />
    </group>

    <group android:checkableBehavior="single"
           android:id="@+id/menu_middle">
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/lists_cut"
            android:title="@string/lists" />
        <item
            android:id="@+id/nav_download_history"
            android:icon="@drawable/downloads_cut"
            android:title="@string/download_history" />

    </group>

    <group android:checkableBehavior="single"
           android:id="@+id/menu_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_cut"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_cut"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/info_cut"
            android:title="@string/info" />
    </group>

</menu>
